Added VoxCells to Asteroid details. Added import/export from sandbox files. Added checks for framework 'door' to Repair.

--- a/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
@@ -35,7 +35,9 @@
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Size}" />
         <Label Grid.Row="4" Grid.Column="0" Content="Size:"/>
         <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding ContentSize}" />
-        <Label Grid.Row="5" Grid.Column="0" Content="Distance:"/>
-        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
+        <Label Grid.Row="5" Grid.Column="0" Content="VoxCells:"/>
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding VoxCells, StringFormat={}{0:#,##0}}" />
+        <Label Grid.Row="6" Grid.Column="0" Content="Distance:"/>
+        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
     </Grid>
 </UserControl>
