--- a/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:SEToolbox.Controls"
         xmlns:interop="clr-namespace:SEToolbox.Interop"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
-        Title="Import Image" Height="380" Width="550" Icon="/SEToolbox;component/app.ico"
+        Title="Import Image" Height="380" Width="550" Icon="/SEToolbox;component/app.ico" Background="{StaticResource DialogBackgroundBrush}"
         commands:DialogService.IsRegisteredView="True"
         commands:DialogCloser.DialogResult="{Binding CloseResult}"
         FocusManager.FocusedElement="{Binding ElementName=uxInitialElement}">
@@ -18,12 +18,6 @@
         <converters:EnumToResouceConverter x:Key="EnumToResouceConverter"/>
         <converters:BusyMouseConverter x:Key="BusyMouseConverter" />
     </Window.Resources>
-    <Window.Background>
-        <LinearGradientBrush>
-            <GradientStop Color="#FF2B2077" Offset="4"/>
-            <GradientStop Color="#FFFFFFFF" Offset="0"/>
-        </LinearGradientBrush>
-    </Window.Background>
     <Window.Cursor>
         <Binding Path="IsBusy" Converter="{StaticResource BusyMouseConverter}"/>
     </Window.Cursor>
