--- a/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:SEToolbox.Controls"
         xmlns:interop="clr-namespace:SEToolbox.Interop"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
-        Title="Import 3D Model" Height="380" Width="520" Icon="/SEToolbox;component/app.ico"
+        Title="Import 3D Model" Height="380" Width="520" Icon="/SEToolbox;component/app.ico" Background="{StaticResource DialogBackgroundBrush}"
         commands:DialogService.IsRegisteredView="True"
         commands:DialogCloser.DialogResult="{Binding CloseResult}"
         FocusManager.FocusedElement="{Binding ElementName=uxInitialElement}">
@@ -15,14 +15,8 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
         <converters:EnumToResouceConverter x:Key="EnumToResouceConverter"/>
-        <converters:BusyMouseConverter x:Key="BusyMouseConverter" />
+        <converters:BusyMouseConverter x:Key="BusyMouseConverter"/>
     </Window.Resources>
-    <Window.Background>
-        <LinearGradientBrush>
-            <GradientStop Color="#FF2B2077" Offset="4"/>
-            <GradientStop Color="#FFFFFFFF" Offset="0"/>
-        </LinearGradientBrush>
-    </Window.Background>
     <Window.Cursor>
         <Binding Path="IsBusy" Converter="{StaticResource BusyMouseConverter}"/>
     </Window.Cursor>
