--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -66,6 +66,11 @@
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Header="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <MenuItem Header="Image" Command="{Binding ImportImageCommand}">
                         <MenuItem.Icon>
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=photo_scenery}" />
@@ -136,7 +141,7 @@
                 <ToolBar>
                     <Button Content="Clear" Command="{Binding ClearCommand}"/>
                     <Button Content="Test" Command="{Binding TestCommand}"/>
-                    <Button Content="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}"/>
+                    <!--<Button Content="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}"/>-->
                 </ToolBar>
             </ToolBarPanel>
             <StatusBar DockPanel.Dock="Bottom">
