--- a/Main/SEToolbox/SEToolbox/Views/WindowAbout.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowAbout.xaml
@@ -2,25 +2,38 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:commands="clr-namespace:SEToolbox.Services"
+        xmlns:converters="clr-namespace:SEToolbox.Converters"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="None"
         Title="About" Height="250" Width="250" Icon="/SEToolbox;component/app.ico"
         commands:DialogCloser.DialogResult="{Binding CloseResult}" AllowsTransparency="True" Background="Transparent">
+    <Window.Resources>
+        <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
+    </Window.Resources>
     <Border CornerRadius="20">
         <Border.Background>
-            <ImageBrush ImageSource="/SEToolbox;component/app.ico" />
+            <ImageBrush ImageSource="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=Toolbox}" />
         </Border.Background>
         <Grid>
-            <Label Content="Space Engineers Toolbox" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,25,0,0" FontSize="20" Foreground="DarkGoldenrod" FontWeight="Bold" FontFamily="Segoe UI" />
+            <Label Content="Space Engineers" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0" FontSize="22" Foreground="White" FontWeight="Normal" FontFamily="Tahoma">
+                <Label.Effect>
+                    <DropShadowEffect BlurRadius="5" ShadowDepth="0" Color="Black" Opacity="1"  RenderingBias="Performance" />
+                </Label.Effect>
+            </Label>
+            <Label Content="Toolbox" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,40,0,0" FontSize="22" Foreground="White" FontWeight="Bold" FontFamily="Segoe UI">
+                <Label.Effect>
+                    <DropShadowEffect BlurRadius="5" ShadowDepth="0" Color="Black" Opacity="1"  RenderingBias="Performance" />
+                </Label.Effect>
+            </Label>
             <StackPanel Orientation="Horizontal"  VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,86,0,0">
-                <TextBlock Text="Version: " Foreground="White" FontWeight="Bold" FontFamily="Segoe UI"/>
-                <TextBlock Text="{Binding Version}" Foreground="White" FontWeight="Bold" FontFamily="Segoe UI"/>
+                <TextBlock Text="Version: " Foreground="LightSkyBlue" FontWeight="Bold" FontFamily="Segoe UI"/>
+                <TextBlock Text="{Binding Version}" Foreground="LightSkyBlue" FontWeight="Bold" FontFamily="Segoe UI"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal"  VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,102,0,0">
-                <TextBlock Text="Created by: " Foreground="White" FontWeight="Bold" FontFamily="Segoe UI"/>
-                <TextBlock Text="{Binding Company}" Foreground="White" FontWeight="Bold" FontFamily="Segoe UI"/>
+                <TextBlock Text="Created by: " Foreground="LightSkyBlue" FontWeight="Bold" FontFamily="Segoe UI"/>
+                <TextBlock Text="{Binding Company}" Foreground="LightSkyBlue" FontWeight="Bold" FontFamily="Segoe UI"/>
             </StackPanel>
             <Border CornerRadius="10" BorderBrush="#80000000" BorderThickness="1" Background="#80000000" Width="200" Height="80" VerticalAlignment="Top" Margin="0,130,0,0" Padding="8">
-                <TextBlock Foreground="White" FontFamily="Segoe UI" TextWrapping="WrapWithOverflow" Text="A toolbox utility for modifying and importing content in the SpaceEngineers Game." />
+                <TextBlock Foreground="White" FontFamily="Segoe UI" TextWrapping="WrapWithOverflow" Text="A toolbox utility for modifying and importing content in the Space Engineers Game." />
             </Border>
             <TextBlock HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20,0,0,10" ToolTip="{Binding HomepageUrl}">
                 <Hyperlink Command="{Binding OpenLinkCommand}">
