--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -7,7 +7,7 @@
     <Media Id="1" Cabinet="SEToolbox.cab" EmbedCab="yes" />
 
     <WixVariable Id="WixUIBannerBmp" Value="WixUIBannerBmp.bmp" />
-    <!--<WixVariable Id="WixUIDialogBmp" Value="WixUIDialogBmp.bmp" />-->
+    <WixVariable Id="WixUIDialogBmp" Value="WixUIDialogBmp.bmp" />
 
     <Upgrade Id="87c8aa64-1a84-4767-ae17-a4b6b6ee1b89">
       <UpgradeVersion Minimum="1.0.0.0" Maximum="99.0.0.0" Property="PREVIOUSVERSIONSINSTALLED" IncludeMinimum="yes" IncludeMaximum="no" />
