Added manging temp Files to be deleted when exiting. Added preliminary voxel generating code. Fixed bug with Importing cutsom asteroid. Added Transparent detection for importing images. Added ability to enter/paste  filenames manually into Import image and Model dialogs. Fixed check on generating model size, to prevent models of 0x0x0 gettin generated as this will create a invalid save for SE. Added calc for bounds on generated voxels. Added build script to generated zip file of release files when building .Msi for release. Added Icon to updater.

--- a/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
@@ -42,7 +42,7 @@
                 
                 <Label Content="Image:" />
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <TextBox Width="180" Text="{Binding Filename}" VerticalAlignment="Center" Name="uxInitialElement"/>
+                    <TextBox Width="180" Text="{Binding Filename, Mode=TwoWay}" VerticalAlignment="Center" Name="uxInitialElement"/>
                     <Button ToolTip="Browse for Image" Command="{Binding BrowseImageCommand}" VerticalAlignment="Center">
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=folder}" />
                     </Button>
