--- a/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
@@ -39,8 +39,8 @@
                 </Grid.ColumnDefinitions>
                 <Label Content="Model:" />
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <TextBox Width="180" Text="{Binding Filename}" VerticalAlignment="Center" Name="uxInitialElement"/>
-                    <Button ToolTip="Browse for Model" Command="{Binding BrowseImageCommand}" VerticalAlignment="Center">
+                    <TextBox Width="180" Text="{Binding Filename, Mode=TwoWay}" VerticalAlignment="Center" Name="uxInitialElement"/>
+                    <Button ToolTip="Browse for Model" Command="{Binding Browse3dModelCommand}" VerticalAlignment="Center">
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=folder}" />
                     </Button>
                 </StackPanel>
