Updated binaries. Fix for not specifying material for import Asteroid. Fix for changes to SE now hiding rare ores, causing 100% rare ore astoierds to change to 100% non-rare stone. WIP for mirroring structures. Storing Asteroid field detail statically to carry over between dialogs, allowing repeated attempts to generate asteroid field. WIP of 3D model conversion to voxels. Fix 'open folder' not working with comma symbol.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -142,6 +142,8 @@
                     <Button Content="Clear" Command="{Binding ClearCommand}"/>
                     <Button Content="Test1" ToolTip="Create test structure for smoothing." Command="{Binding Test1Command}"/>
                     <Button Content="Test2" ToolTip="Optimise structure" Command="{Binding Test2Command}"/>
+                    <Button Content="Test3" ToolTip="Create 1/2 test model" Command="{Binding Test3Command}"/>
+                    <Button Content="Test4" ToolTip="Mirror Structure" Command="{Binding Test4Command}"/>
                 </ToolBar>
             </ToolBarPanel>
             <StatusBar DockPanel.Dock="Bottom">
